fix: recipe-ingredient issues